packages/default-layout/src/styles/defaultLayout.scss
/**
 * A React component to view a PDF document
 *
 * @see https://react-pdf-viewer.dev
 * @license https://react-pdf-viewer.dev/license
 * @copyright 2019-2024 Nguyen Huu Phuoc <me@phuoc.ng>
 */

$rpv-default-layout-toolbar-height: 2.5rem;

.rpv-default-layout__container {
    /* Border */
    border: 1px solid hsl(var(--rpv-border));
    box-sizing: border-box;

    /* Full size */
    height: 100%;
    width: 100%;
}

.rpv-default-layout__toolbar {
    align-items: center;
    background-color: hsl(var(--rpv-muted) / .4);
    border-bottom: 1px solid hsl(var(--rpv-border));
    color: hsl(var(--rpv-muted-foreground));
    display: flex;

    /* Postion */
    left: 0;
    position: absolute;
    top: 0;

    /* Size */
    height: $rpv-default-layout-toolbar-height;
    width: 100%;

    /* To make the tooltip displayed on top of the pages */
    z-index: 1;
}

.rpv-default-layout__sidebar {
    display: flex;
    margin-top: $rpv-default-layout-toolbar-height;
    border-color: hsl(var(--rpv-border));

    &--opened {
        border-color: transparent;
        /* Absolute position */
        bottom: 0;
        left: 0;
        position: absolute;
        top: 0;

        /* Size */
        width: 12rem;

        /* Display it on top of pages */
        z-index: 1;
    }

    &--ltr {
        border-right-width: 1px;
        border-right-style: solid;
    }
    &--rtl {
        border-left-width: 1px;
        border-left-style: solid;
    }
}

.rpv-default-layout__main {
    display: flex;

    /* Fix the scroll issue on Safari */
    height: 100%;

    /* Used to position the sidebar */
    position: relative;

    &--rtl {
        direction: rtl;
    }
}

.rpv-default-layout__body {
    flex: 1;
    overflow: auto;
    padding-top: $rpv-default-layout-toolbar-height;
}

@media (min-width: 768px) {
    .rpv-default-layout__sidebar--opened {
        width: 16rem;
    }
}

@media (min-width: 1024px) {
    .rpv-default-layout__sidebar--opened {
        background: inherit;
        position: inherit;
        width: 20rem;
        z-index: inherit;
    }
}

